--- a/03_dataVisualization_ggplot2.Rmd
+++ b/03_dataVisualization_ggplot2.Rmd
@@ -117,153 +117,117 @@ Die Tilde in der Formel `facets = ~ year` bedeutet `by year`.
 + Die Variablen `continent` und `pop` werden auf den `color` und `size` Aesthetiken dargestellt.
 + Bei Nutzung des gesamten Datensatzes `gapminder` kann eine fünfte Dimension `year` durch die Funktion `facet_wrap()` auf Facetten abgebildet werden.
 
-<!-- # Line plots for visualizing change over time -->
+# Liniendiagramm für Zeitreihen
 
-<!-- ## Scatterplot vs. line plot -->
+## Beispiel 1
 
-<!-- So far we used only scatterplots. The scatterplot is most useful for displaying the relationship between two continuous variables. -->
-<!-- Each point on a scatterplot represents one observation. -->
+```{r echo=TRUE}
+by_year <- gapminder %>%
+  group_by(year) %>%
+  summarize(meanGdpPercap =  mean(gdpPercap))
+```
 
-<!-- Let's look at some code chunks that we used to create a scatterplot (see last section of the dplyr slides on data transformation). -->
+```{r echo=TRUE}
+ggplot(data = by_year) +
+  geom_line(mapping = aes(x = year, y = meanGdpPercap)) +
+  expand_limits(y = 0)
+```
 
-<!-- ```{r echo=TRUE} -->
-<!-- by_continent_year <- gapminder %>% -->
-<!--   group_by(continent, year) %>% -->
-<!--   summarize(meanLifeExp = mean(lifeExp), -->
-<!--             medianLifeExp = median(lifeExp), -->
-<!--             minGdpPercap = min(gdpPercap), -->
-<!--             maxGdpT = max((gdpPercap * pop)/1e12), -->
-<!--             totalPopB = sum(pop/1e9)) -->
-<!-- ``` -->
+## Beispiel 2
 
-<!-- We constructed the following scatterplot: -->
-
-<!-- ```{r echo=TRUE} -->
-<!-- ggplot(data = by_continent_year) + -->
-<!--   geom_point(mapping = aes(x = year,  -->
-<!--                            y = meanLifeExp,  -->
-<!--                            color = continent)) -->
-<!-- ``` -->
-
-<!-- Since, we look at a change over time, we change the type of plot from `geom_point` to `geom_line()` to connect the observations between years. -->
-
-<!-- ```{r echo=TRUE} -->
-<!-- ggplot(data = by_continent_year) + -->
-<!--   geom_line(mapping = aes(x = year,  -->
-<!--                           y = meanLifeExp,  -->
-<!--                           color = continent)) -->
-<!-- ``` -->
+```{r echo=TRUE}
+by_year_continent <- gapminder %>%
+  group_by(year, continent) %>%
+  summarize(meanGdpPercap =  mean(gdpPercap))
+```
 
 
-<!-- ## Line plot showing the change in meanGdpPercap over time -->
+```{r echo=TRUE}
+ggplot(data = by_year_continent) +
+  geom_line(mapping = aes(x = year,
+                          y = meanGdpPercap,
+                          color = continent)) +
+  expand_limits(y = 0)
+```
 
-<!-- ```{r echo=TRUE} -->
-<!-- by_year <- gapminder %>% -->
-<!--   group_by(year) %>% -->
-<!--   summarize(meanGdpPercap =  mean(gdpPercap)) -->
-<!-- ``` -->
+# Säulendiagram für vergleichende Statistiken über mehrere Kategorien
 
-<!-- ```{r echo=TRUE} -->
-<!-- ggplot(data = by_year) + -->
-<!--   geom_line(mapping = aes(x = year, y = meanGdpPercap)) + -->
-<!--   expand_limits(y = 0) -->
-<!-- ``` -->
+```{r echo=TRUE}
+europe1997 <- gapminder %>%
+  filter(year == 1997,
+         continent == "Europe",
+         pop > 50e6)
 
-<!-- ## Line plot showing the change in medianGdpPercap by continent over time -->
+europe1997
+```
 
-<!-- ```{r echo=TRUE} -->
-<!-- by_year_continent <- gapminder %>% -->
-<!--   group_by(year, continent) %>% -->
-<!--   summarize(meanGdpPercap =  mean(gdpPercap)) -->
-<!-- ``` -->
+```{r echo=TRUE}
+ggplot(data = europe1997) +
+geom_col(mapping = aes(x = country,
+                       y = lifeExp))
+```
 
+# Histogramme zur Beschreibung von Verteilungen numerischer Variablen
 
-<!-- ```{r echo=TRUE} -->
-<!-- ggplot(data = by_year_continent) + -->
-<!--   geom_line(mapping = aes(x = year,  -->
-<!--                           y = meanGdpPercap,  -->
-<!--                           color = continent)) + -->
-<!--   expand_limits(y = 0) -->
-<!-- ``` -->
+```{r echo=TRUE}
+ggplot(data = gapminder_1997) +
+  geom_histogram(mapping = aes(x = lifeExp))
+```
 
-<!-- # Bar plots for comparing statistics among several categories -->
+Passe die Korbgröße auf 5 Jahre mit dem Argument `binwidth` an. Welche Information bekommst man zusätzlich, wenn als die `fill` Aesthetik auf `continent` setzt?
 
-<!-- ```{r echo=TRUE} -->
-<!-- europe1997 <- gapminder %>% -->
-<!--   filter(year == 1997,  -->
-<!--          continent == "Europe", -->
-<!--          pop > 50e6) -->
+```{r echo=TRUE}
+ggplot(data = gapminder_1997) +
+  geom_histogram(mapping = aes(x = lifeExp,
+                               fill = continent),
+                 binwidth = 5)
+```
 
-<!-- europe1997 -->
-<!-- ``` -->
+# Boxplots zum Vergleich von Verteilungen einer numerischen Variablen über verschiedene Kategorien
 
-<!-- ```{r echo=TRUE} -->
-<!-- ggplot(data = europe1997) + -->
-<!-- geom_col(mapping = aes(x = country,  -->
-<!--                        y = lifeExp)) -->
-<!-- ``` -->
+## Die Verteilung von Lebenserwartung über die Kontinente
 
-<!-- # Histograms for describing the distribution of a numeric variable -->
+```{r echo=TRUE}
+ggplot(data = gapminder_1997) +
+  geom_boxplot(mapping = aes(x = continent,
+                             y = lifeExp))
+```
 
-<!-- ```{r echo=TRUE} -->
-<!-- ggplot(data = gapminder_1997) +  -->
-<!--   geom_histogram(mapping = aes(x = lifeExp)) -->
-<!-- ``` -->
+Der Boxplot visualisiert alle Ausreißer und fünf zusammenfassende Statistiken:
 
-<!-- Adjust the bin width to 5 years with argument `binwidth`. Which information do you gain if the `fill` aesthetic is set to `continent`? -->
++ Horizontale Linie: Der Median der Verteilung
++ Beginn (Ende) der Box: Unteres (oberes) Quartil
++ Untere (obere) vertikale Linie / Whisker
 
-<!-- ```{r echo=TRUE} -->
-<!-- ggplot(data = gapminder_1997) +  -->
-<!--   geom_histogram(mapping = aes(x = lifeExp,  -->
-<!--                                fill = continent), -->
-<!--                  binwidth = 5) -->
-<!-- ``` -->
+Für mehr Information siehe `?geom_boxplot`.
 
-<!-- # Boxplots for comparing distributions of a numeric variable among several categories -->
+## Vertiefung
 
-<!-- ## The distribution of lifeExp by continent -->
+```{r}
+library(skimr)
+skim(gapminder_1997)
+```
 
-<!-- ```{r echo=TRUE} -->
-<!-- ggplot(data = gapminder_1997) +  -->
-<!--   geom_boxplot(mapping = aes(x = continent, -->
-<!--                              y = lifeExp)) -->
-<!-- ``` -->
+## Erklärung des Boxplots
 
-<!-- The boxplot visualizes all "outlying" points individually and five summary statistics: -->
-
-<!-- + horizontal line: the median of the distribution -->
-<!-- + lower (upper) box called hinge: 1st (3rd) quartile or 25th (75th) percentile  -->
-<!-- + lower (upper) vertical line called whisker: extends from the hinge to the smallest (largest) value no further than $1.5 \cdot IQR$, -->
-
-<!-- where $IQR$ is the inter-quartile range or the distance between the 1st and 3rd quartiles. See `?geom_boxplot` for more information.  -->
-
-<!-- ## Vertiefung -->
-
-<!-- ```{r} -->
-<!-- library(skimr) -->
-<!-- skim(gapminder_1997) -->
-<!-- ``` -->
-
-<!-- ## Erklärung des Boxplots auf Deutsch -->
-
-<!-- |Kennwert |	Beschreibung | Lage im Box-Plot | -->
-<!-- |---------|--------------|------------------| -->
-<!-- |Minimum | Kleinster Wert = `p0` |	Ende des unteren Whiskers oder der südlichste Ausreißer | -->
-<!-- |Unteres Quartil |	25 % der Datenwerte sind kleiner oder gleich `p25` |	Beginn der Box bei `p25`| -->
-<!-- |Median |	50 % der Datenwerte sind kleiner oder gleich `p50` | Fetter Strich innerhalb der Box | -->
-<!-- |Oberes Quartil |	75 % der Datenwerte sind kleiner oder gleich `p75` | Ende der Box | -->
-<!-- |Maximum | Größter Wert = `p100` |	Ende des oberen Whiskers oder der nördlichste Ausreißer | -->
-<!-- |Spannweite| Gesamter Wertebereich des Datensatzes `p100 - p0`	| Länge des gesamten Box-Plots (inklusive Ausreißer) | -->
-<!-- |Interquartilsabstand |	Wertebereich, in dem sich die mittleren 50 % der Daten befinden `p75 - p25`| Ausdehnung der Box| -->
+|Kennwert |	Beschreibung | Lage im Box-Plot |
+|---------|--------------|------------------|
+|Minimum | Kleinster Wert = `p0` |	Ende des unteren Whiskers oder der südlichste Ausreißer |
+|Unteres Quartil |	25 % der Datenwerte sind kleiner oder gleich `p25` |	Beginn der Box bei `p25`|
+|Median |	50 % der Datenwerte sind kleiner oder gleich `p50` | Fetter Strich innerhalb der Box |
+|Oberes Quartil |	75 % der Datenwerte sind kleiner oder gleich `p75` | Ende der Box |
+|Maximum | Größter Wert = `p100` |	Ende des oberen Whiskers oder der nördlichste Ausreißer |
+|Spannweite| Gesamter Wertebereich des Datensatzes `p100 - p0`	| Länge des gesamten Box-Plots (inklusive Ausreißer) |
+|Interquartilsabstand |	Wertebereich, in dem sich die mittleren 50 % der Daten befinden `p75 - p25`| Ausdehnung der Box|
 
 
 
-<!-- ## The distribution of gdpPercap by continent -->
+## Die Verteilung von gdpPercap über continent
 
-<!-- ```{r echo=TRUE} -->
-<!-- ggplot(data = gapminder_1997) +  -->
-<!--   geom_boxplot(mapping = aes(x = continent, -->
-<!--                              y = gdpPercap)) +  -->
-<!--   scale_y_log10() + -->
-<!--   ggtitle(label = "Comparing GDP per capita across continents in 1997") -->
-<!-- ``` -->
+```{r echo=TRUE}
+ggplot(data = gapminder_1997) +
+  geom_boxplot(mapping = aes(x = continent,
+                             y = gdpPercap)) +
+  scale_y_log10() +
+  ggtitle(label = "Comparing GDP per capita across continents in 1997")
+```
